data/derived/comb/progs/unify/prog8299.ml.out
Characters 77-79:
  | (b', c') -> if(c') then f(b') else b';;
                                       ^^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
